--- a/pom.xml
+++ b/pom.xml
@@ -51,17 +51,37 @@
 			<artifactId>druid</artifactId>
 			<version>1.0.18</version>
 		</dependency>
-		
+		<!-- alibaba fastjson -->
+		<dependency>
+		    <groupId>com.alibaba</groupId>
+		    <artifactId>fastjson</artifactId>
+		    <version>1.2.46</version>
+		</dependency>
 		<dependency>
 	        <groupId>org.apache.tomcat</groupId>
 	        <artifactId>tomcat-jdbc</artifactId>
 	    </dependency>
-	    
+	    <dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.2.2</version>
+		</dependency>
+			
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>  
+            <groupId>org.springframework.boot</groupId>  
+            <artifactId>spring-boot-devtools</artifactId>  
+            <optional>true</optional>  
+  		</dependency>  
 	</dependencies>
 
 	<build>
