--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,16 @@ spring.jackson.time-zone=Asia/Chongqing
 server.port=8082
 
 #spring.data.mongodb.uri=mongodb://zcc:zcc123@192.168.88.132:27017/test?maxPoolSize=256
-spring.datasource.url=jdbc:mysql://120.79.46.90/mgs_szfm?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://120.79.46.90/mgs_szfm?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=zcc910319
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#rabbitmq
+spring.rabbitmq.host=192.168.88.128
+spring.rabbitmq.username=rabbitadmin
+spring.rabbitmq.password=123456
+spring.rabbitmq.port=5672
+
+#日志
+logging.config=classpath:logback-roncoo.xml
