--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.url=jdbc:mysql://120.79.46.90/mgs_szfm?useUnicode=true&charact
 spring.datasource.username=root
 spring.datasource.password=zcc910319
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 #rabbitmq
 spring.rabbitmq.host=192.168.88.128
