--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,10 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 #rabbitmq
-spring.rabbitmq.host=192.168.88.128
-spring.rabbitmq.username=rabbitadmin
-spring.rabbitmq.password=123456
-spring.rabbitmq.port=5672
+#spring.rabbitmq.host=192.168.88.128
+#spring.rabbitmq.username=rabbitadmin
+#spring.rabbitmq.password=123456
+#spring.rabbitmq.port=5672
 
 #日志
 logging.config=classpath:logback-roncoo.xml
