--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,6 +35,12 @@ spring.datasource.logSlowSql=true
 #spring.rabbitmq.username=rabbitadmin
 #spring.rabbitmq.password=123456
 #spring.rabbitmq.port=5672
+desc="I LOVE YOU"
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=Asia/Chongqing
 
-#æ¥å¿
+# 主配置文件，配置了这个会优先读取里面的属性覆盖主配置文件的属性
+#spring.profiles.active=dev
+
+# 日志
 logging.config=classpath:logback-roncoo.xml
