--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,11 @@ server.port=8081
 #spring.datasource.url=jdbc:mysql://120.79.46.90/adminlte?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 #spring.datasource.username=root
 #spring.datasource.password=zcc910319
-spring.datasource.url=jdbc:mysql://112.74.20.36:3306/adminlte?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
-spring.datasource.username=ape
-spring.datasource.password=ape!@#
+spring.datasource.url=jdbc:mysql://47.105.94.65:3306/adminlte?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+#spring.datasource.username=ape
+#spring.datasource.password=ape!@#
+spring.datasource.username=root
+spring.datasource.password=54xiaoyue
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 # 下面为连接池的补充设置，应用到上面所有数据源中
@@ -44,3 +46,6 @@ spring.jackson.time-zone=Asia/Chongqing
 
 # 日志
 logging.config=classpath:logback-roncoo.xml
+#解决上传文件保存问题（默认的临时目录会被删除）
+server.tomcat.basedir=/zccdata/data/temp
+
