--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,14 @@ spring.jackson.time-zone=Asia/Chongqing
 server.port=8081
 
 #spring.data.mongodb.uri=mongodb://zcc:zcc123@192.168.88.132:27017/test?maxPoolSize=256
-#spring.datasource.url=jdbc:mysql://120.79.46.90/adminlte?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
-#spring.datasource.username=root
-#spring.datasource.password=zcc910319
-spring.datasource.url=jdbc:mysql://47.105.94.65:3306/adminlte?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://47.107.173.120/adminlte?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+spring.datasource.username=root
+spring.datasource.password=54Tianxia@
+#spring.datasource.url=jdbc:mysql://47.105.94.65:3306/adminlte?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 #spring.datasource.username=ape
 #spring.datasource.password=ape!@#
-spring.datasource.username=root
-spring.datasource.password=54xiaoyue
+#spring.datasource.username=root
+#spring.datasource.password=54xiaoyue
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 # 下面为连接池的补充设置，应用到上面所有数据源中
